--- a/.classpath
+++ b/.classpath
@@ -2,20 +2,15 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Slick2d"/>
-	<classpathentry kind="lib" path="C:/Program Files/eclipse/libaries/slick/lib/ibxm.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/eclipse/libaries/slick/lib/jinput.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/eclipse/libaries/slick/lib/jnlp.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/eclipse/libaries/slick/lib/jogg-0.0.7.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/eclipse/libaries/slick/lib/jorbis-0.0.15.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/eclipse/libaries/slick/lib/lwjgl.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/eclipse/libaries/slick/lib/lwjgl_util.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/eclipse/libaries/slick/lib/lwjgl_util_applet.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/eclipse/libaries/slick/lib/natives-linux.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/eclipse/libaries/slick/lib/natives-mac.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/eclipse/libaries/slick/lib/natives-windows.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/eclipse/libaries/slick/lib/slick.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/eclipse/libaries/slick/lib/slick-examples.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/eclipse/libaries/slick/lib/tinylinepp.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/eclipse/libaries/slick/lib/lwjgl.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Program Files/eclipse/libaries/slick"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Program Files/eclipse/libaries/slick/lib/slick.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Program Files/eclipse/libaries/slick"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
