--- a/.banana4life/project.json
+++ b/.banana4life/project.json
@@ -8,6 +8,6 @@
     "site": "http://ludumdare.com/compo/ludum-dare-28/?action=preview&uid=30929",
     "comments": []
   },
-  "authors": ["Jonas Dann", "Phillip Schichtel", "-Malte Heinzelmann"],
+  "authors": [],
   "date": "2013-12-13"
 }
